--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,9 @@
 <header>
 <h1>{{title}}</h1>
-<app-boton 
+<app-boton
 color="green" 
 text="Añadir"
 (btnClick)="toggleAddTask"
-></app-boton>
+>
+</app-boton>
 </header>
